# iris

./: .gitignore  .markdownlint.json  404.html  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  README_ja.md  advanced.html  api_reference.html  architecture.html  check_output.txt  check_output_2.txt  cli.html  concepts.html  getting_started.html  index.html  indexing.html  laurus-cli.html  laurus-mcp.html  laurus-nodejs.html  laurus-python.html  laurus-ruby.html  laurus-server.html  laurus-wasm.html  laurus.html  print.html  search.html  searcher-c2a407aa.js  searchindex-0ae0be96.js  searchindex-13f35d9d.js  searchindex-14459b15.js  searchindex-19c6610d.js  searchindex-1ee5b2c1.js  searchindex-20f975d1.js  searchindex-260429de.js  searchindex-29659fc1.js  (+59 more)
laurus/: Cargo.toml  README.md  README_ja.md  api_reference.html  deletions.html  engine.html  error_handling.html  extensibility.html  faceting.html  highlighting.html  id_management.html  overview.html  persistence.html  scoring.html  spelling_correction.html
laurus-cli/: Cargo.toml  README.md  README_ja.md  commands.html  installation.html  repl.html  schema_format.html  tutorial.html
laurus-cli/src/: cli.rs  commands.rs  context.rs  main.rs  output.rs
laurus-cli/src/commands/: add.rs  add_field.rs  commit.rs  create.rs  delete.rs  get.rs  mcp.rs  put.rs  repl.rs  schema.rs  search.rs  serve.rs
laurus-mcp/: Cargo.toml  README.md  README_ja.md  getting_started.html  tools.html
laurus-mcp/src/: convert.rs  error.rs  lib.rs  server.rs
laurus-nodejs/: Cargo.toml  README.md  README_ja.md  api_reference.html  development.html  installation.html  package.json  quickstart.html
laurus-nodejs/__tests__/: index.spec.mjs
laurus-nodejs/examples/: README.md  README_ja.md  external-embedder.mjs  hybrid-search.mjs  lexical-search.mjs  multimodal-search.mjs  quickstart.mjs  search-with-openai.mjs  synonym-graph-filter.mjs  vector-search.mjs
laurus-nodejs/src/: analysis.rs  convert.rs  errors.rs  index.rs  lib.rs  query.rs  schema.rs  search.rs
laurus-php/: .gitignore  Cargo.toml  README.md  README_ja.md  composer.json
laurus-php/.cargo/: config.toml
laurus-php/examples/: README.md  README_ja.md  external_embedder.php  hybrid_search.php  lexical_search.php  multimodal_search.php  quickstart.php  search_app.php  search_with_openai.php  synonym_graph_filter.php  vector_search.php
laurus-php/src/: analysis.rs  convert.rs  errors.rs  index.rs  lib.rs  query.rs  schema.rs  search.rs
laurus-php/tests/: LaurusTest.php
laurus-python/: Cargo.toml  README.md  README_ja.md  api_reference.html  installation.html  pyproject.toml  quickstart.html
laurus-python/examples/: README.md  README_ja.md  external_embedder.py  hybrid_search.py  lexical_search.py  multimodal_search.py  quickstart.py  search_with_openai.py  synonym_graph_filter.py  vector_search.py
laurus-python/src/: analysis.rs  convert.rs  errors.rs  index.rs  lib.rs  query.rs  schema.rs  search.rs
laurus-python/tests/: test_index.py
laurus-ruby/: .gitignore  Cargo.toml  Rakefile  api_reference.html  development.html  extconf.rb  installation.html  laurus.gemspec  quickstart.html
laurus-ruby/examples/: README.md  README_ja.md  external_embedder.rb  hybrid_search.rb  lexical_search.rb  multimodal_search.rb  quickstart.rb  search_with_openai.rb  synonym_graph_filter.rb  vector_search.rb
laurus-ruby/ext/laurus_ruby/: extconf.rb
laurus-ruby/lib/: laurus.rb
laurus-ruby/src/: analysis.rs  convert.rs  errors.rs  index.rs  lib.rs  query.rs  schema.rs  search.rs
laurus-ruby/test/: test_helper.rb  test_index.rb
laurus-server/: Cargo.toml  README.md  README_ja.md  build.rs  configuration.html  getting_started.html  grpc_api.html  http_gateway.html  tutorial.html
laurus-server/src/: config.rs  context.rs  gateway.rs  lib.rs  server.rs
laurus-server/src/convert/: document.rs  error.rs  mod.rs  schema.rs  search.rs
laurus-server/src/gateway/: convert.rs  document.rs  error.rs  health.rs  index.rs  search.rs
laurus-server/src/service/: document.rs  health.rs  index.rs  mod.rs  search.rs
laurus-wasm/: .gitignore  Cargo.toml  README.md  README_ja.md  api_reference.html  development.html  installation.html  package.json  quickstart.html
laurus-wasm/examples/: README.md  README_ja.md  index.html
laurus-wasm/js/: opfs_bridge.js
laurus-wasm/src/: analysis.rs  convert.rs  embedder.rs  errors.rs  index.rs  lib.rs  query.rs  schema.rs  search.rs  storage.rs
laurus/benches/: bench.rs  distance_bench.rs  hnsw_benchmark.rs  lexical_search_bench.rs  search_perf.rs  vector_search_bench.rs
laurus/examples/: common.rs  hybrid_search.rs  lexical_search.rs  multimodal_search.rs  quickstart.rs  search_with_candle.rs  search_with_openai.rs  synonym_graph_filter.rs  vector_search.rs
laurus/src/: analysis.rs  data.rs  embedding.rs  engine.rs  error.rs  lexical.rs  lib.rs  spelling.rs  storage.rs  store.rs  util.rs  vector.rs
laurus/src/analysis/: analyzer.rs  char_filter.rs  synonym.rs  token.rs  token_filter.rs  tokenizer.rs
laurus/src/embedding/: candle_bert_embedder.rs  candle_clip_embedder.rs  embedder.rs  openai_embedder.rs  per_field.rs  precomputed.rs  registry.rs
laurus/src/engine/: query.rs  schema.rs  search.rs
laurus/src/lexical/: index.rs  query.rs  reader.rs  store.rs  writer.rs
laurus/src/maintenance/: deletion.rs
laurus/src/spelling/: corrector.rs  dictionary.rs  suggest.rs
laurus/src/storage/: column.rs  file.rs  memory.rs  prefixed.rs  structured.rs
laurus/src/store/: document.rs  log.rs
laurus/src/util/: id.rs  levenshtein.rs  simd.rs  time.rs  varint.rs
laurus/src/vector/: index.rs  query.rs  reader.rs  (+2 more)
laurus/tests/: advanced_fusion_test.rs  bkd_integration_test.rs  chunk_management_test.rs  deletion_logic_test.rs  hnsw_append_test.rs  hybrid_unification_test.rs  mmap_test.rs  schema_lexical_test.rs  span_integration_test.rs  unified_engine_test.rs  unified_filter_test.rs  unified_search_test.rs  vector_deletion_test.rs  vector_merge_test.rs  vector_segment_test.rs  wal_recovery_test.rs
(+912 files in other folders)
