[workspace]
members = [
    "laurus",
    "laurus-cli",
    "laurus-server",
    "laurus-mcp",
    "laurus-python",
    "laurus-nodejs",
    "laurus-wasm",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
description = "Unified search library for lexical, vector, and semantic retrieval"
documentation = "https://docs.rs/laurus"
homepage = "https://github.com/mosuka/laurus"
repository = "https://github.com/mosuka/laurus"
readme = "README.md"
keywords = ["search", "vector", "lexical", "hybrid", "library"]
categories = ["text-processing"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
dialoguer = "0.12.0"
laurus = { version = "0.5.0", path = "laurus", default-features = false }
laurus-mcp = { version = "0.5.0", path = "laurus-mcp" }
laurus-server = { version = "0.5.0", path = "laurus-server" }
prost = "0.14.3"
rmcp = { version = "1.3.0", features = ["server", "transport-io"] }
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tabled = "0.20.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
toml = "1.0.6"
tonic = "0.14.5"
tonic-build = "0.14.5"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.release]
lto = true
