[package]
name = "laurus-cli"
version = { workspace = true }
edition = { workspace = true }
description = "Command-line interface for the Laurus search engine"
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = ["search", "cli", "indexing", "query"]
categories = ["command-line-utilities"]
license = { workspace = true }

[[bin]]
name = "laurus"
path = "src/main.rs"

[dependencies]
laurus = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tabled = { workspace = true }
rustyline = { workspace = true }
dialoguer = { workspace = true }
