[package]
name = "laurus-cli"
version = { workspace = true }
edition = { workspace = true }
description = "Command-line interface for the Laurus search engine"
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
keywords = ["search", "cli", "indexing", "query"]
categories = ["command-line-utilities"]
license = { workspace = true }

[[bin]]
name = "laurus"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
rustyline = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

laurus = { workspace = true }
laurus-server = { workspace = true }
laurus-mcp = { workspace = true }

[features]
embeddings-multimodal = ["laurus/embeddings-multimodal"]
