[package]
name = "laurus-cli"
version = { workspace = true }
edition = { workspace = true }
description = "Command-line interface for the Laurus search engine"
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
keywords = ["search", "cli", "indexing", "query"]
categories = ["command-line-utilities"]
license = { workspace = true }

[[bin]]
name = "laurus"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
laurus = { workspace = true, features = ["native"] }
laurus-mcp = { workspace = true }
laurus-server = { workspace = true }
rustyline = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

[features]
embeddings-candle = [
    "laurus/embeddings-candle",
    "laurus-server/embeddings-candle",
    "laurus-mcp/embeddings-candle",
]
embeddings-multimodal = [
    "laurus/embeddings-multimodal",
    "laurus-server/embeddings-multimodal",
    "laurus-mcp/embeddings-multimodal",
]
embeddings-openai = [
    "laurus/embeddings-openai",
    "laurus-server/embeddings-openai",
    "laurus-mcp/embeddings-openai",
]
embeddings-all = [
    "embeddings-candle",
    "embeddings-multimodal",
    "embeddings-openai",
]
