[package]
name = "laurus-mcp"
version.workspace = true
edition.workspace = true
description = "MCP (Model Context Protocol) server for the Laurus search engine"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["search", "mcp", "indexing"]
categories = ["text-processing"]
license.workspace = true

[lib]
name = "laurus_mcp"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
laurus = { workspace = true }
laurus-server = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
