[package]
name = "laurus-mcp"
version.workspace = true
edition.workspace = true
description = "MCP (Model Context Protocol) server for the Laurus search engine"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["search", "mcp", "indexing"]
categories = ["text-processing"]
license.workspace = true

[lib]
name = "laurus_mcp"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
laurus = { workspace = true, features = ["native"] }
laurus-server = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

[features]
embeddings-candle = [
    "laurus/embeddings-candle",
    "laurus-server/embeddings-candle",
]
embeddings-multimodal = [
    "laurus/embeddings-multimodal",
    "laurus-server/embeddings-multimodal",
]
embeddings-openai = [
    "laurus/embeddings-openai",
    "laurus-server/embeddings-openai",
]
embeddings-all = [
    "embeddings-candle",
    "embeddings-multimodal",
    "embeddings-openai",
]

[dev-dependencies]
tempfile = { workspace = true }
