[package]
name = "laurus-php"
version = "0.7.0"
edition = "2024"
description = "PHP bindings for the Laurus search library"
license = "MIT"
repository = "https://github.com/mosuka/laurus"
homepage = "https://github.com/mosuka/laurus"

[lib]
name = "laurus_php"
crate-type = ["cdylib"]

[features]
embeddings-candle = ["laurus/embeddings-candle"]
embeddings-multimodal = ["laurus/embeddings-multimodal"]
embeddings-openai = ["laurus/embeddings-openai"]
embeddings-all = [
    "embeddings-candle",
    "embeddings-multimodal",
    "embeddings-openai",
]

[dependencies]
laurus = { version = "0.7.0", path = "../laurus", default-features = false, features = ["native"] }
ext-php-rs = "0.15.7"
tokio = { version = "1.50.0", features = ["full"] }
chrono = { version = "0.4.44", features = ["serde"] }
