[package]
name = "laurus-server"
version.workspace = true
edition.workspace = true
description = "gRPC server for the Laurus search engine"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
name = "laurus_server"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
laurus = { workspace = true, features = ["native"] }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
embeddings-candle = ["laurus/embeddings-candle"]
embeddings-multimodal = ["laurus/embeddings-multimodal"]
embeddings-openai = ["laurus/embeddings-openai"]
embeddings-all = [
    "embeddings-candle",
    "embeddings-multimodal",
    "embeddings-openai",
]

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
