[package]
name = "laurus-wasm"
version = { workspace = true }
edition = { workspace = true }
description = "WebAssembly bindings for the Laurus search library"
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
keywords = ["search", "wasm", "vector", "lexical", "hybrid"]
categories = ["wasm"]
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
laurus = { workspace = true, default-features = false }
async-trait = "0.1.89"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
js-sys = "0.3.91"
web-sys = { version = "0.3.91", features = ["console"] }
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.64"
