[package]
name = "laurus"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
keywords = { workspace = true }
categories = { workspace = true }
license = { workspace = true }
autoexamples = false

[dependencies]
ahash = { version = "0.8.12", features = ["serde"] }
aho-corasick = "1.1.4"
anyhow = { workspace = true }
async-trait = "0.1.89"
bit-vec = "0.9.1"
bytecheck = "0.8.2"
byteorder = "1.5.0"
chrono = { workspace = true }
crc32fast = "1.5.0"
crossbeam-channel = "0.5.15"
crossbeam-deque = "0.8.6"
csv = "1.4.0"
fst = "0.4.7"
futures = "0.3.32"
lazy_static = "1.5.0"
lindera = { version = "2.3.3", features = [
    "embed-unidic",
    "embed-ko-dic",
    "embed-jieba",
] }
log = "0.4.29"
memmap2 = "0.9.10"
num_cpus = "1.17.0"
parking_lot = "0.12.5"
pest = "2.8.6"
pest_derive = "2.8.6"
rand = "0.10.0"
rayon = "1.11.0"
regex = "1.12.3"
rkyv = { version = "0.8.15", features = ["std"] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
unicode-normalization = "0.1.25"
unicode-segmentation = "1.12.0"
uuid = { version = "1.22.0", features = ["v4"] }
wide = "1.2.0"

# Optional embedding dependencies
candle-core = { version = "0.9.2", optional = true }
candle-nn = { version = "0.9.2", optional = true }
candle-transformers = { version = "0.9.2", optional = true }
hf-hub = { version = "0.5.0", optional = true }
tokenizers = { version = "0.22.2", optional = true }
reqwest = { version = "0.13.2", features = ["json"], optional = true }
image = { version = "0.25.10", optional = true }

[features]
default = []
embeddings-candle = [
    "candle-core",
    "candle-nn",
    "candle-transformers",
    "hf-hub",
    "tokenizers",
]
embeddings-multimodal = [
    "candle-core",
    "candle-nn",
    "candle-transformers",
    "hf-hub",
    "tokenizers",
    "image",
]
embeddings-openai = ["reqwest"]
embeddings-all = [
    "embeddings-candle",
    "embeddings-multimodal",
    "embeddings-openai",
]

[[example]]
name = "quickstart"

[[example]]
name = "lexical_search"

[[example]]
name = "vector_search"

[[example]]
name = "hybrid_search"

[[example]]
name = "synonym_graph_filter"

[[example]]
name = "search_with_candle"
required-features = ["embeddings-candle"]

[[example]]
name = "search_with_openai"
required-features = ["embeddings-openai"]

[[example]]
name = "multimodal_search"
required-features = ["embeddings-multimodal"]

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "hnsw_benchmark"
harness = false

[[bench]]
name = "distance_bench"
harness = false

[[bench]]
name = "search_perf"
harness = false

[[bench]]
name = "lexical_search_bench"
harness = false

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
tokio-test = "0.4.5"
