[package]
name = "laurus"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
keywords = { workspace = true }
categories = { workspace = true }
license = { workspace = true }
autoexamples = false

[dependencies]
ahash = { version = "0.8.12", features = ["serde", "std", "compile-time-rng"], default-features = false }
aho-corasick = "1.1.4"
anyhow = { workspace = true }
async-trait = { workspace = true }
bit-vec = "0.9.1"
bytecheck = "0.8.2"
byteorder = "1.5.0"
chrono = { workspace = true }
crc32fast = "1.5.0"
csv = "1.4.0"
fst = "0.4.7"
futures = "0.3.32"
lazy_static = "1.5.0"
lindera = { version = "2.3.3", features = [
    "embed-ipadic",
    "embed-ko-dic",
    "embed-cc-cedict",
] }
log = "0.4.29"
lru = "0.16.3"
parking_lot = "0.12.5"
pest = "2.8.6"
pest_derive = "2.8.6"
rand = "0.10.0"
regex = "1.12.3"
rkyv = { version = "0.8.15", features = ["std"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.50.0", features = ["sync", "macros"] }
unicode-normalization = "0.1.25"
unicode-segmentation = "1.12.0"
uuid = { version = "1.22.0", features = ["v4", "js"] }
wide = "1.2.0"

# Native-only dependencies (file I/O, threading, mmap)
crossbeam-channel = { version = "0.5.15", optional = true }
crossbeam-deque = { version = "0.8.6", optional = true }
memmap2 = { version = "0.9.10", optional = true }
num_cpus = { version = "1.17.0", optional = true }
rayon = { version = "1.11.0", optional = true }
tempfile = { workspace = true, optional = true }

# Optional embedding dependencies
candle-core = { version = "0.9.2", optional = true }
candle-nn = { version = "0.9.2", optional = true }
candle-transformers = { version = "0.9.2", optional = true }
hf-hub = { version = "0.5.0", optional = true }
tokenizers = { version = "0.22.2", optional = true }
reqwest = { version = "0.13.2", features = ["json"], optional = true }
image = { version = "0.25.10", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[features]
default = ["native"]
native = [
    "ahash/runtime-rng",
    "tokio/full",
    "dep:crossbeam-channel",
    "dep:crossbeam-deque",
    "dep:memmap2",
    "dep:num_cpus",
    "dep:rayon",
    "dep:tempfile",
]
embeddings-candle = [
    "candle-core",
    "candle-nn",
    "candle-transformers",
    "hf-hub",
    "tokenizers",
]
embeddings-multimodal = [
    "candle-core",
    "candle-nn",
    "candle-transformers",
    "hf-hub",
    "tokenizers",
    "image",
]
embeddings-openai = ["reqwest"]
embeddings-all = [
    "embeddings-candle",
    "embeddings-multimodal",
    "embeddings-openai",
]

[[example]]
name = "quickstart"

[[example]]
name = "lexical_search"

[[example]]
name = "vector_search"

[[example]]
name = "hybrid_search"

[[example]]
name = "synonym_graph_filter"

[[example]]
name = "search_with_candle"
required-features = ["embeddings-candle"]

[[example]]
name = "search_with_openai"
required-features = ["embeddings-openai"]

[[example]]
name = "multimodal_search"
required-features = ["embeddings-multimodal"]

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "hnsw_benchmark"
harness = false

[[bench]]
name = "distance_bench"
harness = false

[[bench]]
name = "search_perf"
harness = false

[[bench]]
name = "lexical_search_bench"
harness = false

[[bench]]
name = "vector_search_bench"
harness = false

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
tokio-test = "0.4.5"
